WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241599
[Cocoa] Crash in SourceBufferPrivateAVFObjC::layerDidReceiveError
https://bugs.webkit.org/show_bug.cgi?id=241599
Summary
[Cocoa] Crash in SourceBufferPrivateAVFObjC::layerDidReceiveError
Eric Carlson
Reported
2022-06-14 09:40:46 PDT
SourceBufferPrivateAVFObjC::layerDidReceiveError sometimes crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2022-06-14 09:41:07 PDT
rdar://92972452
Eric Carlson
Comment 2
2022-06-14 09:49:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1505
EWS
Comment 3
2022-06-15 12:28:50 PDT
Committed
r295568
(
251573@main
): <
https://commits.webkit.org/251573@main
> Reviewed commits have been landed. Closing PR #1505 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug