Cherry-pick f0ea7d0bbf16. rdar://problem/92972452

[Cocoa] Crash in SourceBufferPrivateAVFObjC::layerDidReceiveError.
    https://bugs.webkit.org/show_bug.cgi?id=241599
    rdar://92972452

    Reviewed by Jer Noble.

    Have WebAVSampleBufferErrorListener take a strong reference to `parent` before calling it.

    * Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
    (-[WebAVSampleBufferErrorListener observeValueForKeyPath:ofObject:change:context:]):
    (-[WebAVSampleBufferErrorListener layerFailedToDecode:]):
    (-[WebAVSampleBufferErrorListener audioRendererWasAutomaticallyFlushed:]):

    Canonical link: https://commits.webkit.org/251573@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295568 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.723@safari-613-branch